--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "firebase": "^9.14.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-canvas-confetti": "^1.3.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
@@ -22,6 +26,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "stripe": "^10.17.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
