--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
+    "canvas-confetti": "^1.6.0",
     "cors": "^2.8.5",
+    "eslint-config-react-app": "^7.0.1",
     "firebase": "^9.14.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -25,8 +27,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "stripe": "^10.17.0",
-    "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,8 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.3"
   }
 }
